Added more verbs; added caveat warning to README

--- a/nouns.tex
+++ b/nouns.tex
@@ -16,19 +16,15 @@
 \fr  {programme}{un}   {program}
 \subsubsection*{Work words}
 \fr  {accomplissement}{l'}   {completion (of a task)}
-\fr  {avantage socieux}{l'}   {benefits (as in {\em pay and...}}
+\fr  {avantage socieux}{l'}   {benefits (as in {\em pay and...})}
 \fr  {bias}{le}   {bias}
 \fr  {cheminement de carrière}{le}   {career path}
 \fr  {chiffrement}{le}   {encryption}
 \fr  {comportment}{le}   {behaviour}
 \fr  {contracteur}{le}   {contractor}
 \fr  {correctif securite}{le}   {security update (computer)}
-\fr  {direction}{}   {director general}
-\fr  {direction generale}{}   {branch}
-\fr  {dirigeant principal de l'information: DPI}{}   {chief information officer: CIO}
-\fr  {division}{}   {directorate}
 \fr  {dossier}{le}   {the file}
-\fr  {embauche}{le}   {a hiring/an employment}
+\fr  {embauche}{l'}   {a hiring/an employment}
 \fr  {jalon}{le}   {milestone}
 \fr  {ordre du jour}{l'}   {agenda}
 \fr  {partie prenante}{le}   {stakeholder}
@@ -56,7 +52,7 @@
 \fr  {liberté d'expression}{la}   {freedom of expression}
 \fr  {menace}{la}   {a threat}
 \fr  {motivation}{la}   {motivation}
-\fr  {pente glissante}{la}   {unsteady/shaky ground}
+\fr  {pente glissante}{la}   {slippery slope}
 \fr  {period}{la}   {the period}
 \fr  {plupart}{la}   {the majority}
 \fr  {salubrité}{la}   {cleanliness}
@@ -71,6 +67,9 @@
 \fr  {convention collectif}{la}   {collective agreement}
 \fr  {date d'écheance}{la}   {due date}
 \fr  {détachment}{la}   {secondment}
+\fr  {direction generale}{la}   {branch}
+\fr  {dirigeant principal de l'information: DPI}{la}   {chief information officer: CIO}
+\fr  {division}{la}   {directorate}
 \fr  {ébouche}{l'}   {a draft}
 \fr  {êmpechement}{l'}   {an obstacle}
 \fr  {équipe}{l'}   {team}
