--- a/qualities.tex
+++ b/qualities.tex
@@ -1,6 +1,7 @@
 \section{Adjectives}
 \fr  {ambiteaux(se)}{}   {ambitious}
 \fr  {analytique}{}   {analytical}
+\fr  {attentif}{}   {responsif}
 \fr  {autonome}{}   {independent}
 \fr  {autoritaire}{}   {authoritarian}
 \fr  {conciliante(e)}{}   {conciliatory}
@@ -22,6 +23,7 @@
 \fr  {prioritaire}{}   {priority}
 \fr  {respectueux}{}   {respectful}
 \fr  {serieux}{}   {serious}
+\fr  {simpliste}{}   {simplistic}
 \fr  {sympathique}{}   {friendly}
 \fr  {tendu}{}   {tense}
 \fr  {tolerant(e)}{}   {tolerant}
