--- a/verbs.tex
+++ b/verbs.tex
@@ -1,6 +1,7 @@
 \section{Verbs}
 {\sffamily\bfseries Core}\\
 \frv  {aborder}{}   {to address, approach}
+\frv  {achever}{}   {to finish}
 \frv  {acquerir}{}   {to acquire}
 \frv  {adapter}{s'}   {to adapt}
 \frv  {assurer} {s'}   {to make sure}
@@ -10,26 +11,32 @@
 \frv  {conseiller}{}   {to council}
 \frv  {constater}{}   {to notice}
 \frv  {convaincre}{}   {to convince/to pursuade}
+\frv  {coordonner}{}   {to coordinate}
 \frv  {décrire}{}   {to describe}
 \frv  {démontrer}{}   {to prove/to demonstrate}
-\frv  {élaborer}{}   {to work out/to develop}
+\frv  {diriger}{}   {To manage, supervise, steer}
+\frv  {diriger}{se}   {To find one's way}
+\frv  {effectuer}{}   {to carry out}
 \frv  {empecher}{}   {to prevent}
+\frv  {élaborer}{}   {to work out/to develop}
 \frv  {engager}{}   {to hire/to commit/to take on}
+\frv  {établir}{}   {to establish}
 \frv  {équilibrer}{}   {to balance}
+\frv  {évaluer}{}   {to assess}
 \frv  {exiger}{}   {to demand}
 \frv  {faire connaisance}{}   {to get to know}
+\frv  {fixer une reunion}{}   {to schedule a meeting}
 \frv  {franchir}{}   {to get through (an obstacle)}
 \frv  {influencer}{}   {to influence}
 \frv  {inscrire}{s'}   {to subscribe}
 \frv  {limiter}{}   {to limit}
-\frv  {suggerer}{}   {suggest}
-\frv  {fixer une reunion}{}   {to schedule a meeting}
+\frv  {negocier}{}   {to negociate}
 \frv  {mentionner}{}   {to mention}
 \frv  {mobiliser}{}   {to mobilise/to rally}
 \frv  {motiver}{}   {to motivate}
 \frv  {observer}{}   {to observe}
-\frv  {occuper}{s'}   {to be busy/to take care of something}
 \frv  {occuper (un poste)}{}   {occupy (a job)}
+\frv  {occuper}{s'}   {to be busy/to take care of something}
 \frv  {participer}{}   {to participate}
 \frv  {permettre}{}   {to allow}
 \frv  {prioriser}{}   {to prioritize}
@@ -38,7 +45,13 @@
 \frv  {réagir}{}   {to react}
 \frv  {recommander}{}   {to recommender}
 \frv  {reporter}{}   {to postpone}
-\frv  {resister}{}   {to resist}\newline
+\frv  {resister}{}   {to resist}
+\frv  {resoudre}{}   {to solve}
+\frv  {retarder}{}   {to delay}
+\frv  {selectionner}{}   {to select}
+\frv  {suggerer}{}   {to suggest}
+\frv  {verifier}{}   {to check}
+\newline
 {\sffamily\bfseries More...}\\
 \frv  {chiffrer}{}   {to encrypt}
 \frv  {empirer}{}   {to worsen}
@@ -49,7 +62,6 @@
 \frv  {provoquer}{}   {to provoke}
 \frv  {rassembler}{}   {to collect/to gather}
 \frv  {redoubter}{}   {to doubt}
-\frv  {rendre possible}{}   {to make possible}
 \frv  {repenser}{}   {to revise}
 \frv  {ressember a}{}   {to resemble}
 \frv  {réconcilier}{}   {to reconcile}
@@ -77,7 +89,7 @@
 \frv  {attention à}{\ldots }   {to pay attention to}
 \frv  {avancer \small qqch}{\ldots}   {to something move forward}
 \frv  {confiance à quelqu’un}{\ldots}   {to trust someone}
-\frv  {face à}{\ldots}   {to oppose, face up to}
+\frv  {face à}{\ldots}   {to confront, tackle}
 \frv  {mieux}{\ldots de son }   {to do one’s best} 
 \frv  {partie de}{\ldots}   {to be a part of}
 \frv  {preuve de}{\ldots}   {to display a quality / virtue}
@@ -122,3 +134,4 @@
      \frv  {compte à}{\ldots se }   {to realize}
      \frv  {evidence à}{\ldots se }   {to face facts}
      \frv  {grâces à}{\ldots}    {to give thanks to}
+     \frv  {rendre possible}{}   {to make possible}
