--- a/subjonctif/sub_volunte.tex
+++ b/subjonctif/sub_volunte.tex
@@ -1,4 +1,4 @@
-\subsection*{Verbes de sentiment}
+\subsection*{Verbes de volonte}
 \fr  {accepter que}{}   {accept that}
 \fr  {aimer que}{}   {like that}
 \fr  {approuver que}{}   {approve that}
@@ -9,8 +9,8 @@
 \fr  {exiger que}{}   {demand that}
 \fr  {il est desirable que}{}   {it is desirable that}
 \fr  {insister que}{}   {insist that}
-\fr  {preferer que}{}   {prefer that}
+\fr  {préférer que}{}   {prefer that}
 \fr  {proposer que}{}   {propose that}
-\fr  {suggerer que}{}   {suggest that}
+\fr  {suggérer que}{}   {suggest that}
 \fr  {tenir à ce que}{}   {to hold on to qqch}
 \fr  {être d'accord que}{}   {agree that}
