Moved to 4 column

--- a/subjonctif.tex
+++ b/subjonctif.tex
@@ -1,14 +1,16 @@
 
 
+
+%% \vfill\null
+%% \columnbreak
 \section{Subjonctif}
 \input{subjonctif/sub_general.tex}
 \input{subjonctif/sub_autre.tex}
 \input{subjonctif/sub_doubt.tex}
 \input{subjonctif/sub_necessite.tex}
-\input{subjonctif/sub_possibilite.tex}
 \input{subjonctif/sub_sentiment.tex}
+\input{subjonctif/sub_possibilite.tex}
 \input{subjonctif/sub_volunte.tex}
-
 \input{subjonctif/sub_indicatif.tex}
 
 
