--- a/subjonctif/sub_general.tex
+++ b/subjonctif/sub_general.tex
@@ -1,4 +1,4 @@
-\subsection*{General}
+{\sffamily\bfseries General}\\
 \fr  {admettant que}{en}   {in admitting that}
 \fr  {afin que}{}   {so that/in order that}
 \fr  {attendent que}{en}   {while}
@@ -16,5 +16,3 @@
 \fr  {quoi que}{}   {whatever}
 \fr  {sans que}{}   {without}
 \fr  {vouloir que}{}   {to want that}
-
-
