--- a/subjonctif/sub_indicatif.tex
+++ b/subjonctif/sub_indicatif.tex
@@ -1,5 +1,4 @@
-
-\subsection*{Indicatif /{\color{myblue} subjonctif negatif}}
+{\sffamily\bfseries Indicatif /{\color{myblue} subjonctif negatif}}\\
 \fr  {alors que}{}   {while}
 \fr  {\color{myblue}constater que}{}   {to observe that}
 \fr  {\color{myblue}croire que}{}   {to believe that}
