--- a/subjonctif/sub_necessite.tex
+++ b/subjonctif/sub_necessite.tex
@@ -1,4 +1,4 @@
-\subsection*{Verbes de nécessité}
+{\sffamily\bfseries Verbes de nécessité}\\
      {\bf {\em il est\ldots}}\\
 \fr  {\ldots essential que}{}   {it is essential that}
 \fr  {\ldots important que}{}   {it is important that}
