--- a/subjonctif/sub_sentiment.tex
+++ b/subjonctif/sub_sentiment.tex
@@ -1,5 +1,4 @@
-\subsection*{Verbes de sentiment}
-
+{\sffamily\bfseries Verbes de sentiment}\\
 \fr  {adorer que}{}   {adore that}
 \fr  {avoir la chance que}{}   {to have the chance that}
 \fr  {avoir peur que}{}   {to fear that}
