--- a/subjonctif/sub_volunte.tex
+++ b/subjonctif/sub_volunte.tex
@@ -1,4 +1,4 @@
-\subsection*{Verbes de volonte}
+{\sffamily\bfseries Verbes de volonte}\\
 \fr  {accepter que}{}   {accept that}
 \fr  {aimer que}{}   {like that}
 \fr  {approuver que}{}   {approve that}
