--- a/subjonctif/sub_autre.tex
+++ b/subjonctif/sub_autre.tex
@@ -1,8 +1,7 @@
-\subsection*{Autre expressions}
+{\sffamily\bfseries Autre expressions}\\
 \fr  {admettant que}{en}   {in admitting that}
 \fr  {assure que}{s'}   {to make sure that}
 \fr  {autant que}{}   {as much as}
 \fr  {pour etre certain que}{}   {to be certain that}
 \fr  {supposant que}{}   {supposing that}
 \fr  {supposer que}{à}   {imagine that}
-
