--- a/subjonctif/sub_possibilite.tex
+++ b/subjonctif/sub_possibilite.tex
@@ -1,5 +1,4 @@
-
-\subsection*{Verbes de possibilité}
+{\sffamily\bfseries Verbes de possibilité}\\
 \fr  {il arrive que} { }   {it happens that}
 \fr  {il est possible que}{ }   {it is possible that}
 \fr  {il est probable que}{ }   {it is probable that}
