Corrections from Jean; qualities.tex changes to adjectives.tex

--- a/adjectives.tex
+++ b/adjectives.tex
@@ -1,5 +1,5 @@
 \section{Adjectives}
-\fr  {ambiteaux(se)}{}   {ambitious}
+\fr  {ambitieaux(se)}{}   {ambitious}
 \fr  {analytique}{}   {analytical}
 \fr  {attentif}{}   {responsif}
 \fr  {autonome}{}   {independent}
@@ -12,7 +12,7 @@
 \fr  {essential(le)}{}   {essential}
 \fr  {exigeant}{}   {demanding}
 \fr  {fiable}{}   {reliable}
-\fr  {fundemantal}{}   {fundemantal}
+\fr  {fundemental}{}   {fundemantal}
 \fr  {honnête}{}   {honest}
 \fr  {intègre}{}   {to have integrity}
 \fr  {juste}{}   {fair}
