--- a/mot_liens.tex
+++ b/mot_liens.tex
@@ -33,7 +33,7 @@
 \fr  {malgre que}{}   {despite}
 \fr  {même si}{}   {even if}
 \fr  {tandis que}{}   {while}
-{\sffamily\bfseries Consequance}\\
+{\sffamily\bfseries Consequence}\\
 \fr  {ainsi, alors}{}   {so}
 \fr  {c'est la raison pour laquelle}{}   {it is the reason}
 \fr  {ce que fait que}{}   {}
