--- a/nouns.tex
+++ b/nouns.tex
@@ -33,7 +33,6 @@
 \fr  {programme d'aide d'employées}{le}   {employee assistance program}
 \fr  {rendement}{le}   {productivity/output}
 \fr  {roulement du personelle}{le}   {turnover (employees)}
-\fr  {substantif}{le}   {substantive}
 \fr  {systeme}{le}   {the system}
 \fr  {télétravail}{le}   {telecommuting}
 \fr  {temp prescrits}{le}   {window of time}
@@ -70,11 +69,11 @@
 \fr  {direction generale}{la}   {branch}
 \fr  {dirigeant principal de l'information: DPI}{la}   {chief information officer: CIO}
 \fr  {division}{la}   {directorate}
-\fr  {ébouche}{l'}   {a draft}
+\fr  {ébauche}{l'}   {a draft}
 \fr  {êmpechement}{l'}   {an obstacle}
 \fr  {équipe}{l'}   {team}
 \fr  {équip special}{l'}   {tiger team}
-\fr  {gestions des talents}{}   {talent management}
+\fr  {gestion des talents}{la}   {talent management}
 \fr  {heures compressé}{les}   {compressed work hours}
 \fr  {heurs supplementaire (f)}{}   {overtime}
 \fr  {informatique en nuage}{}   {cloud computing}
