--- a/subjonctif/sub_sentiment.tex
+++ b/subjonctif/sub_sentiment.tex
@@ -22,7 +22,7 @@
      \fr  {\ldots inaccaptable que}{}   {it is innacceptable that}
      \fr  {\ldots in/juste que}{}   {it is in/just that}
      \fr  {\ldots normal que}{}   {it is normal that}
-     \fr  {\ldots raisinnable}{}   {it is reasonable that}
+     \fr  {\ldots raisonnable}{}   {it is reasonable that}
      \fr  {\ldots regretable que}{}   {it is regretable that}
-     \fr  {\ldots redicule que}{}   {it is ridiculous that}
+     \fr  {\ldots ridicule que}{}   {it is ridiculous that}
      \fr  {\ldots terrible que}{}   {it is terrible that}
