--- a/gnfrench.tex
+++ b/gnfrench.tex
@@ -30,10 +30,10 @@
 \let\bar\overline
 
 %% % Add by GNewton for french
-\newcommand{\fr}[3]{{\em #2 #1} {{\bf |} #3}\\}
+\newcommand{\fr}[3]{{\em #2 #1}{{{\bf}\,|}\ #3}\\}
 %% %\newcommand{\fr}[3]{}
 
-\newcommand{\frv}[3]{{\em #2#1} {{\bf |} #3}\\}
+\newcommand{\frv}[3]{{\em #2#1}{{{\bf}\,|}\ #3}\\}
 %% %  \newcommand{\frv}[3]{}
 %% %%%%%%%%%%%
 \input{def}
